Updated visibilty property to visible for safari flicker fix

--- a/_properties.scss
+++ b/_properties.scss
@@ -21,6 +21,6 @@
 	animation-fill-mode: $fill;
 }
 
-@mixin visibility($visibility: hidden) {
+@mixin visibility($visibility: visible) {
 	backface-visibility: $visibility;
 }
